src/objects/Financial_Application__c.object
<CustomObject>
    <fields>
        <fullName>Lender_Credit_Amount__c</fullName>
        <label>Lender Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lender_Credit_Ratio__c</fullName>
        <formula>Lender_Credit_Amount__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lender Credit Amount / Purchase Price</inlineHelpText>
        <label>Lender Credit Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lender_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lender Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lender_Mortgage_Broker_Company_Name__c</fullName>
        <formula>Loan_Officer__r.Account.Name</formula>
        <label>Lender/Mortgage Broker Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Activity__c</fullName>
        <label>Loan Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Loan</fullName>
                </value>
                <value>
                    <fullName>Loan Modification</fullName>
                </value>
                <value>
                    <fullName>Payoff/Reconveyance</fullName>
                </value>
                <value>
                    <fullName>Refinance/Subordination&quot;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Modification_Reason_Comments__c</fullName>
        <label>Loan Modification Reason / Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_Email__c</fullName>
        <formula>Loan_Officer__r.Email</formula>
        <label>Loan Officer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_Fax__c</fullName>
        <formula>Loan_Officer__r.Fax</formula>
        <label>Loan Officer Fax #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_Phone__c</fullName>
        <formula>Loan_Officer__r.Work_Phone__c</formula>
        <label>Loan Officer Phone #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_Title__c</fullName>
        <formula>Loan_Officer__r.Title</formula>
        <label>Loan Officer Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Officer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Program_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Originator_Address_from_1003__c</fullName>
        <label>Loan Originator Address (from 1003)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loan_Term_of_1st_Mortgage_Years__c</fullName>
        <inlineHelpText>Loan Term in Years</inlineHelpText>
        <label>Loan Term of 1st Mortgage (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Term_of_1st_Mortgage_Years_above__c</fullName>
        <formula>Loan_Term_of_1st_Mortgage_Years__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Term of 1st Mortgage (Years)(above)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Type_of_1st_Mortgage__c</fullName>
        <label>Loan Type of 1st Mortgage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Adjustable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MCC_Cert_ID__c</fullName>
        <defaultValue>&quot;MCC-&quot;&amp;RIGHT(TEXT(YEAR(TODAY())),2)&amp;&quot;-XXXX-&quot;</defaultValue>
        <label>MCC Cert ID#</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Credit__c</fullName>
        <defaultValue>0.15</defaultValue>
        <inlineHelpText>This MCC Credit % is effective as of YYYY, MM/DD</inlineHelpText>
        <label>MCC Credit %</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MCC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minus_MCC_Credit__c</fullName>
        <formula>Amount_of_First_Mortgage__c * Interest_Rate__c * MCC_Credit__c * -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Negative value of (First Mortgage * Interest Rate * MCC Credit %)</inlineHelpText>
        <label>Minus MCC Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_HOA_Dues__c</fullName>
        <label>Monthly HOA Dues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Homeowner_s_Insurance__c</fullName>
        <label>Monthly Homeowner&apos;s Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Property_Tax__c</fullName>
        <formula>(Purchase_Price__c * Property_Tax_Rate__c)/12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Purchase Price * Property Tax Rate / 12</inlineHelpText>
        <label>Monthly Property Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_TND_s_in_this_Application__c</fullName>
        <label>Number of TND&apos;s in this Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_title_for_another_unit_explanation__c</fullName>
        <label>On title for another unit explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Credit_Amount__c</fullName>
        <label>Other Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Credit_Details__c</fullName>
        <label>Other Credit - Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Credit_Ratio__c</fullName>
        <formula>Other_Credit_Amount__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Other Credit Amount / Purchase Price</inlineHelpText>
        <label>Other Credit Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Financing_Amount_1__c</fullName>
        <label>Other Financing Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Financing_Amount_2__c</fullName>
        <label>Other Financing Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Financing_Amount_3__c</fullName>
        <label>Other Financing Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Financing_Ratio_1__c</fullName>
        <formula>Other_Financing_Amount_1__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Financing Ratio 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Financing_Ratio_2__c</fullName>
        <formula>Other_Financing_Amount_2__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Financing Ratio 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Financing_Ratio_3__c</fullName>
        <formula>Other_Financing_Amount_3__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Financing Ratio 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Financing_Source_1__c</fullName>
        <label>Other Financing Source 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Financing_Source_2__c</fullName>
        <label>Other Financing Source 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Financing_Source_3__c</fullName>
        <label>Other Financing Source 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oustanding_judgements_against_borrowers__c</fullName>
        <label>Oustanding judgements against borrowers?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outstanding_Judgement_Explanation__c</fullName>
        <label>Outstanding Judgement Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owned_a_unit_last_3_yrs_explanation__c</fullName>
        <label>Owned a unit (last 3 yrs) explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_Amount_Requested_Spelled_Out__c</fullName>
        <label>PIC Amount Requested Spelled Out</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_Amount_Requested__c</fullName>
        <label>PIC Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PIC_Funding_Source_s__c</fullName>
        <label>PIC Funding Source(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PIC_Loan_ID__c</fullName>
        <defaultValue>&quot;PIC-&quot;&amp;RIGHT(TEXT(YEAR(TODAY())),2)&amp;&quot;-XXXX-&quot;</defaultValue>
        <label>PIC Loan ID#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_Ratio__c</fullName>
        <formula>PIC_Amount_Requested__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PIC Amount Requested / Purchase Price</inlineHelpText>
        <label>PIC Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PIC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Address_End_Date_of_Residency__c</fullName>
        <label>Previous Address End Date of Residency</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Address_Start_Date_of_Residency__c</fullName>
        <label>Previous Address Start Date of Residency</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Address_Status_Other_Details__c</fullName>
        <label>Previous Address Status - Other Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Address_Status__c</fullName>
        <label>Previous Address Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owned</fullName>
                </value>
                <value>
                    <fullName>Rented</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Borrower_Current_Address__c</fullName>
        <label>Primary Borrower Current Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Borrower_Previous_Address__c</fullName>
        <label>Primary Borrower Previous Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Borrower_at_current_address_3y__c</fullName>
        <inlineHelpText>Has the Primary Borrower resided at the Current Address for less than 3 years?</inlineHelpText>
        <label>Primary Borrower at current address &lt; 3y</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_s__c</fullName>
        <label>Program(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DALP</fullName>
                </value>
                <value>
                    <fullName>CSLP</fullName>
                </value>
                <value>
                    <fullName>FRDALP</fullName>
                </value>
                <value>
                    <fullName>PIC</fullName>
                </value>
                <value>
                    <fullName>TND</fullName>
                </value>
                <value>
                    <fullName>BMR-DALP</fullName>
                </value>
                <value>
                    <fullName>MCC</fullName>
                </value>
                <value>
                    <fullName>RMCC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <label>Property Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Tax_Rate__c</fullName>
        <inlineHelpText>From MOHCD Table.</inlineHelpText>
        <label>Property Tax Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Purchase_Price_Spelled_Out__c</fullName>
        <label>Purchase Price Spelled Out</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Price_from_above__c</fullName>
        <formula>Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Price (from above)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ratio_Additional_Cash_Purchase_Price__c</fullName>
        <formula>Any_Additional_Cash_from_Borrower__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Additional Cash From Borrower / Purchase Price</inlineHelpText>
        <label>Ratio (Additional Cash/Purchase Price)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ratio_Down_Payment_Purchase_Price__c</fullName>
        <formula>Borrower_s_Total_Downpayment__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Borrower&apos;s Total Downpayment / Purchase Price</inlineHelpText>
        <label>Ratio (Down Payment/Purchase Price)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ratio_First_Mortgage_Purchase_Price__c</fullName>
        <formula>Amount_of_First_Mortgage__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount of First Mortgage / Purchase Price</inlineHelpText>
        <label>Ratio (First Mortgage/Purchase Price)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Seller_Credit_Amount__c</fullName>
        <label>Seller Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seller_Credit_Ratio__c</fullName>
        <formula>Seller_Credit_Amount__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Seller Credit Amount / Purchase Price</inlineHelpText>
        <label>Seller Credit Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Seller_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seller Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shared_Appreciation_Spelled_Out__c</fullName>
        <label>Shared Appreciation Spelled Out</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_Appreciation__c</fullName>
        <formula>Total_Amount_Requested_from_CCSF__c /  Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shared Appreciation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Supervisor_District__c</fullName>
        <label>Supervisor District</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TND_AMI_Table_Lookup_Limit__c</fullName>
        <label>TND AMI Table Lookup Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TND_Amount_Requested_Spelled_Out__c</fullName>
        <label>TND Amount Requested Spelled Out</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TND_Amount_Requested__c</fullName>
        <label>TND Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TND_Funding_Source_s__c</fullName>
        <label>TND Funding Source(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TND_Loan_ID__c</fullName>
        <defaultValue>&quot;TND-&quot;&amp;RIGHT(TEXT(YEAR(TODAY())),2)&amp;&quot;-XXXX-&quot;</defaultValue>
        <label>TND Loan ID#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TND_Median_Income_Table_Source__c</fullName>
        <defaultValue>&apos;Federal - HUD Unadjusted&apos;</defaultValue>
        <label>TND Median Income Table Source</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TND_Median_Income_Table_Year__c</fullName>
        <label>TND Median Income Table Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TND_Ratio__c</fullName>
        <formula>TND_Amount_Requested__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>TND Amount Requested / Purchase Price</inlineHelpText>
        <label>TND Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Targeted_Area_Status__c</fullName>
        <formula>IF(

OR(
Census_Tract__c = 107,
Census_Tract__c = 113,
Census_Tract__c = 114,
Census_Tract__c = 115,
Census_Tract__c = 117,
Census_Tract__c = 118,
Census_Tract__c = 124,
Census_Tract__c = 125,
Census_Tract__c = 161,
Census_Tract__c = 231,
Census_Tract__c = 605,
Census_Tract__c = 607
),
&quot;Targeted&quot;,
&quot;Non-Targeted&quot;)</formula>
        <inlineHelpText>Targeted if Census Tract # is any of the following:

107
113
114
115
117
118
124
125
161
231
605
607</inlineHelpText>
        <label>Targeted Area Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Requested_from_CCSF_Ratio__c</fullName>
        <formula>Total_Amount_Requested_from_CCSF__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount Requested from CCSF / Purchase Price</inlineHelpText>
        <label>Total Amount Requested from CCSF Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Requested_from_CCSF__c</fullName>
        <formula>BMR_DALP_Amount_Requested__c + BMR_DALP_Plus_Amount_Requested__c + DALP_Amount_Requested__c + CSLP_Amount_Requested__c + FRDALP_Amount_Requested__c + PIC_Amount_Requested__c + TND_Amount_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Amounts from each Program</inlineHelpText>
        <label>Total Amount Requested from CCSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Housing_Expenses_w_o_MCC__c</fullName>
        <formula>Annual_Mortgage_Payment__c +  Annual_Property_Tax__c +  Annual_Homeowner_s_Insurance__c + Annual_HOA_Dues__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual Mortgage Payment + Annual Property Tax + Annual Homeowners Insurance + Annual HOA Dues</inlineHelpText>
        <label>Total Annual Housing Expenses w/o MCC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Housing_Expenses_with_MCC__c</fullName>
        <formula>Annual_Mortgage_Payment__c + Annual_Property_Tax__c + Annual_Homeowner_s_Insurance__c + Annual_HOA_Dues__c + Minus_MCC_Credit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual Mortgage Payment + Annual Property Tax + Annual Homeowners Insurance + Annual HOA /dues – MCC Credit</inlineHelpText>
        <label>Total Annual Housing Expenses with MCC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Other_Debt__c</fullName>
        <formula>All_Other_Monthly_Debt__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>All Other Monthly Debt * 12</inlineHelpText>
        <label>Total Annual Other Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cash_from_Borrower_s_including_DP__c</fullName>
        <formula>Borrower_s_Total_Downpayment__c + Total_Costs__c + Any_Additional_Cash_from_Borrower__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Downpayment + Total Costs + Additional Cash from Borrower</inlineHelpText>
        <label>Total Cash from Borrower(s) including DP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Costs__c</fullName>
        <formula>Purchase_Price__c + Estimated_Closing_Costs__c + Estimated_Prepaid_Escrow__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Purchase Price + Est Closing Costs + Est Prepaid Escrow</inlineHelpText>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_DTI_w_MCC_w_Program_Loans__c</fullName>
        <formula>(Total_Annual_Housing_Expenses_with_MCC__c + Total_Annual_Other_Debt__c - Total_Amount_Requested_from_CCSF__c) / Total_Household_Gross_Annual_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Total Annual Housing Expenses with MCC + Total Annual Other Debt - Total Amount Requested from CCSF) / Total Household Gross Annual Income</inlineHelpText>
        <label>Total DTI (w MCC, w Program Loans)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_DTI_w_MCC_w_o_Program_Loans__c</fullName>
        <formula>(Total_Annual_Housing_Expenses_with_MCC__c + Total_Annual_Other_Debt__c) / Total_Household_Gross_Annual_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Total Annual Housing Expenses with MCC +  Total Annual Other Debt) / Total Household Gross Annual Income</inlineHelpText>
        <label>Total DTI (w MCC, w/o Program Loans)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_DTI_w_o_MCC_w_Program_Loans__c</fullName>
        <formula>(Total_Annual_Housing_Expenses_w_o_MCC__c + Total_Annual_Other_Debt__c - Total_Amount_Requested_from_CCSF__c) / Total_Household_Gross_Annual_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Total Annual Housing Expenses without MCC + Total Annual Other Debt - Total Amount Requested from CCSF) / Total Household Gross Annual Income</inlineHelpText>
        <label>Total DTI (w/o MCC, w Program Loans)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_DTI_w_o_MCC_w_o_Program_Loans__c</fullName>
        <formula>(Total_Annual_Housing_Expenses_w_o_MCC__c +  Total_Annual_Other_Debt__c) / Total_Household_Gross_Annual_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Total Annual Housing Expenses without MCC +  Total Annual Other Debt) / Total Household Gross Annual Income</inlineHelpText>
        <label>Total DTI (w/o MCC, w/o Program Loans)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_HH_Imputed_Assets_BMR_DALP_Plus__c</fullName>
        <formula>(Total_Household_Assets_Incl_Retirement__c + Earnest_Money_Deposit_Amount__c - Total_Household_Non_Liquid_Assets__c - 5000) * 0.02</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total HH Imputed Assets BMR-DALP Plus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Household_Assets_After_Purchase__c</fullName>
        <formula>Total_Household_Assets_Incl_Retirement__c - Total_Cash_from_Borrower_s_including_DP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Household Assets (Incl. Retirement) - Total Cash from Borrower(s), including DP</inlineHelpText>
        <label>Total Household Assets After Purchase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Household_Assets_Incl_Retirement__c</fullName>
        <label>Total Household Assets Incl. Retirement</label>
        <summarizedField>Financial_Application_Member__c.Member_s_Grand_Total_Assets__c</summarizedField>
        <summaryForeignKey>Financial_Application_Member__c.Financial_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Household_Gross_Annual_Income__c</fullName>
        <label>Total Household Gross Annual Income</label>
        <summarizedField>Financial_Application_Member__c.Member_s_Grand_Total_Incomes__c</summarizedField>
        <summaryForeignKey>Financial_Application_Member__c.Financial_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Household_Imputed_Assets_BMR_DALP__c</fullName>
        <formula>(Total_Household_Assets_Incl_Retirement__c + Earnest_Money_Deposit_Amount__c - Total_Household_Non_Liquid_Assets__c - 5000) * 0.02</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Total Household Assets Incl. Retirement + Earnest Money Deposit Amount - Total Household Non Liquid Assets - 5000) * 0.02</inlineHelpText>
        <label>Total Household Imputed Assets BMR-DALP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Household_Imputed_Assets__c</fullName>
        <formula>Total_Household_Assets_Incl_Retirement__c + Earnest_Money_Deposit_Amount__c - Total_Household_Non_Liquid_Assets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Total Household Incl. Retirement Assets + Earnest Money Deposit) - Total Household Non-Liquid Assets</inlineHelpText>
        <label>Total Household Imputed Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Household_Non_Liquid_Assets__c</fullName>
        <formula>Total_Household_Assets_Incl_Retirement__c - Total_of_HH_Liq_Assets_w_o_Retirement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Household Assets Incl. Retirement - Total of HH Liq. Assets w/o Retirement</inlineHelpText>
        <label>Total Household Non-Liquid Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Household_Size__c</fullName>
        <label>Total Household Size</label>
        <summaryForeignKey>Financial_Application_Member__c.Financial_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Housing_Expenses_w_o_MCC__c</fullName>
        <formula>Total_Annual_Housing_Expenses_w_o_MCC__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Annual Housing Expenses without MCC / 12</inlineHelpText>
        <label>Total Monthly Housing Expenses w/o MCC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Housing_Expenses_with_MCC__c</fullName>
        <formula>Total_Annual_Housing_Expenses_with_MCC__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Annual Housing Expenses with MCC / 12</inlineHelpText>
        <label>Total Monthly Housing Expenses with MCC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other_Credits_Amount__c</fullName>
        <formula>Seller_Credit_Amount__c + Lender_Credit_Amount__c + Earnest_Money_Deposit_Amount__c + Other_Credit_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Seller Credit Amount + Lender Credit Amount + Earnest Money Deposit Amount + Other Credit Amount</inlineHelpText>
        <label>Total Other Credits Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>